--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,7 +52,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         push: true
-        tags: user/app:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-data-jpa:latest
   
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
