--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Clean package
+      run: mvn clean package
     - name: Build with Maven
       run: mvn clean install
     -
