--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,9 @@ name: Validate build
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", workflow_dispatch]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", workflow_dispatch]
 
 jobs:
   build:
@@ -47,12 +47,12 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    -
-      name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-data-jpa:latest
+    # -
+    #   name: Build and push
+    #   uses: docker/build-push-action@v3
+    #   with:
+    #     push: true
+    #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-data-jpa:latest
   
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
