--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,17 +6,16 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Validate build
+name: Validate project
 
 on:
   push:
-    branches: [ "master", workflow_dispatch]
+    branches: [ "master"]
   pull_request:
-    branches: [ "master", workflow_dispatch]
+    branches: [ "master"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     services:
