--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,13 +33,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
-    - name: Debug Build Context
-      run: |
-          ls -R
-          ls -R /app
-          echo "Current directory: $(pwd)"
-          echo "List files in target directory:"
-          ls -R ./target
+    # - name: Debug Build Context
+    #   run: |
+    #       ls -R
+    #       ls -R /app
+    #       echo "Current directory: $(pwd)"
+    #       echo "List files in target directory:"
+    #       ls -R ./target
     -
       name: Login to Docker Hub
       uses: docker/login-action@v3
