--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,9 +3,11 @@ name: Validate push
 
 on:
   push:
-    branches: [ "master"]
+    branches: 
+      - master
   pull_request:
-    branches: [ "master"]
+    branches: 
+      - master
 
 jobs:
   validate_and_deploy:
