--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,9 +32,7 @@ jobs:
           distribution: "temurin"
           cache: maven
       - name: Build with Maven
-        run: |
-          mvn clean install
-          mvn test  # Run tests
+        run: mvn clean install
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
